# pve-tool

./: Cargo.toml  README.md  config.toml  shell.nix
.github/workflows/: rust.yml
src/: client.rs  cluster.rs  config.rs  main.rs  snapshot.rs
tests/: integration_tests.rs
