[package]
name = "pve-tool"
version = "0.1.1"
edition = "2024"
description = "Safe Proxmox VE snapshot management tool"
license = "GPL-3.0"
repository = "https://github.com/liberodark/pve-tool"
readme = "README.md"
keywords = ["proxmox", "snapshot", "backup", "virtualization", "pve"]
categories = ["command-line-utilities", "virtualization"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "deny"
unused_imports = "deny"
